# babybatch

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
src/babybatch/: lib.rs
src/babybatch/comm/: mod.rs
src/babybatch/structure/: mod.rs  resource.rs  thread_pool.rs  worker.rs
src/babybatch/util/: errors.rs
